objects/sumoapp__AdditionalInfo__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Rate__c</fullName>
        <formula>TotalAttendedFormula__c / TotalEnrolled__c</formula>
        <label>Attendance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attendee_Status__c</fullName>
        <label>Attendee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Calendar Event Information</relationshipLabel>
        <relationshipName>SUMOAdditionalInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CourseLanguage__c</fullName>
        <label>Course Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English (US)</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>ASL</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chinese Mandarin</fullName>
                </value>
                <value>
                    <fullName>Creole</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Goboligok</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latin</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Swahili</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>Urdu</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Yiddish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CourseNumber__c</fullName>
        <label>Course Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExcludeCourseFromHUD9902__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Course From HUD 9902</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FacilitatorInformation__c</fullName>
        <formula>Facilitator__r.FirstName &amp; &quot; &quot; &amp; Facilitator__r.LastName  &amp; BR() &amp;  
Facilitator__r.Title &amp; BR() &amp;
$Label.AgencyProfileName &amp; BR() &amp;
Facilitator__r.Phone &amp; BR() &amp;
 Facilitator__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facilitator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialCapabilityCourse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Capability Course</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrequentlyAskedQuestionsSpanish__c</fullName>
        <label>Frequently Asked Questions Spanish</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FrequentlyAskedQuestions__c</fullName>
        <label>Frequently Asked Questions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FullDescriptionSpanish__c</fullName>
        <label>Full Description Spanish</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FullDescription__c</fullName>
        <label>Full Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funder</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HUDActivityType__c</fullName>
        <label>HUD Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HUDActivityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HUD_Purpose__c</fullName>
        <label>HUD Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed financial literacy workshop, including home affordability, budgeting and understanding use of credit</fullName>
                </value>
                <value>
                    <fullName>Completed predatory lending, loan scam or other fraud prevention workshop</fullName>
                </value>
                <value>
                    <fullName>Completed fair housing workshop</fullName>
                </value>
                <value>
                    <fullName>Completed homelessness prevention workshop</fullName>
                </value>
                <value>
                    <fullName>Completed rental workshop</fullName>
                </value>
                <value>
                    <fullName>Completed pre-purchase homebuyer education workshop</fullName>
                </value>
                <value>
                    <fullName>Completed non-delinquency post-purchase workshop, including home maintenance and/or financial management for homeowners</fullName>
                </value>
                <value>
                    <fullName>Completed resolving or preventing mortgage delinquency workshop</fullName>
                </value>
                <value>
                    <fullName>Completed disaster preparedness assistance workshop</fullName>
                </value>
                <value>
                    <fullName>Completed disaster recovery assistance workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HighlightsSpanish__c</fullName>
        <label>Highlights Spanish</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Highlights__c</fullName>
        <label>Highlights</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IsParent__c</fullName>
        <formula>IsBlank(sumoapp__Parent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NoShowRate__c</fullName>
        <formula>TotalNoShow__c / TotalEnrolled__c</formula>
        <label>No Show Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Open_Seats__c</fullName>
        <formula>IF( NOT( ISNULL(sumoapp__Capacity__c)) , IF((sumoapp__Capacity__c - TotalEnrolled__c)&gt;=0,TEXT(sumoapp__Capacity__c - TotalEnrolled__c),&apos;0&apos;), &apos;Unlimited&apos;)</formula>
        <label>Open Seats</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Presenter of type Affiliate !</errorMessage>
            <filterItems>
                <field>Contact.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Purchase Homebuyer Education</fullName>
                </value>
                <value>
                    <fullName>Financial Literacy</fullName>
                    <label>Financial Literacy (Including Home Affordability, Budgeting, and Understanding Use of Credit)</label>
                </value>
                <value>
                    <fullName>Resolve or Prevent Mortgage Delinquency</fullName>
                    <label>Resolving or Preventing Mortgage Delinquency</label>
                </value>
                <value>
                    <fullName>Home Maint Financial Mgmt</fullName>
                    <label>Non-Delinquency post-purchase (Including Home Maintenance and/or Financial Management for Homeowners)</label>
                </value>
                <value>
                    <fullName>Fair Housing</fullName>
                </value>
                <value>
                    <fullName>Predatory Lending</fullName>
                    <label>Predatory Lending Loan Scam or Other Fraud Prevention</label>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Homelessness Prevention</fullName>
                </value>
                <value>
                    <fullName>Disaster Preparedness</fullName>
                    <label>Disaster Preparedness Assistance</label>
                </value>
                <value>
                    <fullName>Disaster Recovery</fullName>
                    <label>Disaster Recovery Assistance</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShortDescriptionSpanish__c</fullName>
        <label>Short Description Spanish</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShortDescription__c</fullName>
        <label>Short Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Courses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAttendedChild__c</fullName>
        <label>Total Attended</label>
        <summaryFilterItems>
            <field>sumoapp__Attendee__c.Attendance_Status__c</field>
            <operation>equals</operation>
            <value>Attended - Complete, Attended - Incomplete</value>
        </summaryFilterItems>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalAttendedFormula__c</fullName>
        <formula>CASE(RecordType.DeveloperName, &apos;Course&apos;, IF(IsParent__c == true, Total_Attended__c, TotalAttendedChild__c), &apos;Event&apos;, TotalAttendedChild__c,TotalAttendedChild__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalEnrolled__c</fullName>
        <label>Total Enrolled</label>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalNoShow__c</fullName>
        <label>Total No Show</label>
        <summaryFilterItems>
            <field>sumoapp__Attendee__c.Attendance_Status__c</field>
            <operation>equals</operation>
            <value>No Show</value>
        </summaryFilterItems>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Attended__c</fullName>
        <label>Total Attended</label>
        <summaryFilterItems>
            <field>sumoapp__Attendee__c.Attendance_Status__c</field>
            <operation>equals</operation>
            <value>Course Complete, Course Incomplete</value>
        </summaryFilterItems>
        <summaryForeignKey>sumoapp__Attendee__c.sumoapp__SumoEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Duration_In_Minutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Duration In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Counseling</fullName>
                </value>
                <value>
                    <fullName>Non-Counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidationCombined__c</fullName>
        <formula>IF(        
        ISPICKVAL(HUD_Purpose__c, &apos;&apos;) ||
        ISBLANK(CourseNumber__c) ||
        ISBLANK(sumoapp__Organizer__c) ||
        ISBLANK(sumoapp__EventName__c) ||
        ISBLANK(sumoapp__StartDatetime__c) ||
        ISBLANK(sumoapp__DurationInMinutes__c) ||
        ISPICKVAL(Session_Type__c, &apos;&apos;) ||
        ISBLANK(Funder__c) ||
        ISPICKVAL(HUDActivityType__c, &apos;&apos;)
        ,
        &apos;Required field(s) missing: &apos; &amp;
        IF(ISPICKVAL(HUD_Purpose__c, &apos;&apos;), &apos;HUD Purpose, &apos;, &apos;&apos;) &amp;
        IF(ISBLANK(CourseNumber__c), &apos;Course Number, &apos;, &apos;&apos;) &amp;
        IF(ISBLANK(sumoapp__Organizer__c), &apos;Organizer, &apos;, &apos;&apos;) &amp;
        IF(ISBLANK(sumoapp__EventName__c), &apos;Course Name, &apos;, &apos;&apos;) &amp;
        IF(ISBLANK(sumoapp__StartDatetime__c), &apos;Start Datetime, &apos;, &apos;&apos;) &amp;
        IF(ISBLANK(sumoapp__DurationInMinutes__c), &apos;Duration In Minutes, &apos;, &apos;&apos;) &amp;
        IF(ISPICKVAL(Session_Type__c, &apos;&apos;), &apos;Course Type, &apos;, &apos;&apos;) &amp;
        IF(ISBLANK(Funder__c), &apos;Funder, &apos;, &apos;&apos;) &amp;
        IF(ISPICKVAL(HUDActivityType__c, &apos;&apos;), &apos;HUD Activity Type, &apos;, &apos;&apos;)
        ,
        &apos;NO ERROR&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdditionalAttendees__c</fullName>
        <label>Additional Attendees</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdditionalParticipants__c</fullName>
        <label>Additional Participants</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__AlternateHostName__c</fullName>
        <label>Alternate Host Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedConfirmationNumber__c</fullName>
        <label>Booked Confirmation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookingDuringTheCourseAllowed__c</fullName>
        <label>Allow Registration During the Course?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BOOK_BEGINING_COURSE</fullName>
                    <default>true</default>
                    <label>Can Book Before Course Has Started</label>
                </value>
                <value>
                    <fullName>BOOK_DURING_COURSE</fullName>
                    <label>Can Book After Course Has Started</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__BufferTimePost__c</fullName>
        <inlineHelpText>If set, SUMO will create a Post-Buffer appointment after the scheduled appointment, to give the Host a buffer.</inlineHelpText>
        <label>Post-Buffer Time (Minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__BufferTimePre__c</fullName>
        <inlineHelpText>If set, SUMO will create a Pre-Buffer appointment before the scheduled appointment, to give the Host a buffer.</inlineHelpText>
        <label>Pre-Buffer Time (Minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__CancellationReasonOption__c</fullName>
        <label>Cancellation Reason Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Interested Anymore</fullName>
                </value>
                <value>
                    <fullName>Need to Reschedule</fullName>
                </value>
                <value>
                    <fullName>No show of the participant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Have a Conflict</fullName>
                    <isActive>false</isActive>
                    <label>Have a Conflict</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__CancellationReason__c</fullName>
        <label>Cancellation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Capacity__c</fullName>
        <inlineHelpText>The total # of seats or people allowed to register for this event, once met, the event is considered SOLD OUT.  If blank, then capacity is unlimited.</inlineHelpText>
        <label>Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If you would like people to self-register for this Event, you must choose a category to effectively tie this Event to the Online Scheduler.</inlineHelpText>
        <label>Category</label>
        <referenceTo>sumoapp__Category__c</referenceTo>
        <relationshipLabel>Category Activities</relationshipLabel>
        <relationshipName>CategoryActivities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__ClientLinkTextArea__c</fullName>
        <label>Client Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ClientLink__c</fullName>
        <label>Client Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Color__c</fullName>
        <defaultValue>CASE($RecordType.DeveloperName, &quot;Event&quot;, &quot;#5679C0&quot;, &quot;Course&quot;, &quot;#5679C0&quot;, &quot;Appointment&quot;, &quot;#EEEEEE&quot;, &quot;#EEEEEE&quot;)</defaultValue>
        <description>Html Color Code</description>
        <label>Color</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__DatetimeSectionDescription__c</fullName>
        <label>Datetime Section Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DefaultDurationOptions__c</fullName>
        <label>Default Duration Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WEEKS</fullName>
                    <default>true</default>
                    <label>Week/s</label>
                </value>
                <value>
                    <fullName>MONTH</fullName>
                    <label>Month</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__DefaultReccuringSeries__c</fullName>
        <label>Default Reccuring Series</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ALL_EVENTS</fullName>
                    <default>true</default>
                    <label>All Events in Series</label>
                </value>
                <value>
                    <fullName>FUTURE_EVENTS</fullName>
                    <label>Future Events in Series</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DurationInMinutes__c</fullName>
        <formula>( sumoapp__EndDatetime__c -  sumoapp__StartDatetime__c )*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>15</fullName>
                    <label>15 Minutes</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>30 Minutes</label>
                </value>
                <value>
                    <fullName>45</fullName>
                    <label>45 Minutes</label>
                </value>
                <value>
                    <fullName>60</fullName>
                    <default>true</default>
                    <label>1 hour</label>
                </value>
                <value>
                    <fullName>90</fullName>
                    <label>1.5 hour</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>2 hours</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>2.5 hours</label>
                </value>
                <value>
                    <fullName>180</fullName>
                    <label>3 hours</label>
                </value>
                <value>
                    <fullName>210</fullName>
                    <label>3.5 hours</label>
                </value>
                <value>
                    <fullName>240</fullName>
                    <label>4 hours</label>
                </value>
                <value>
                    <fullName>270</fullName>
                    <label>4.5 hours</label>
                </value>
                <value>
                    <fullName>300</fullName>
                    <label>5 hours</label>
                </value>
                <value>
                    <fullName>330</fullName>
                    <label>5.5 hours</label>
                </value>
                <value>
                    <fullName>360</fullName>
                    <label>6 hours</label>
                </value>
                <value>
                    <fullName>390</fullName>
                    <label>6.5 hours</label>
                </value>
                <value>
                    <fullName>420</fullName>
                    <label>7 hours</label>
                </value>
                <value>
                    <fullName>450</fullName>
                    <label>7.5 hours</label>
                </value>
                <value>
                    <fullName>480</fullName>
                    <label>8 hours</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <isActive>false</isActive>
                    <label>10</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <isActive>false</isActive>
                    <label>20</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <isActive>false</isActive>
                    <label>5</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__DynamicTravelTimeStrategy__c</fullName>
        <label>Dynamic Travel Time Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EndDatetime__c</fullName>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventColor__c</fullName>
        <label>Event Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventName__c</fullName>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ExternalNotes__c</fullName>
        <label>External Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__FrequencyNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Frequency Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__FrequencyType__c</fullName>
        <label>Frequency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAILY</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>WEEKLY</fullName>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>MONTHLY</fullName>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>SPECIFIC_DATES</fullName>
                    <label>Specific Dates</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__GenerateVirtualDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Virtual Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__InProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IncludeVideoConferenceDetails__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Video Conference Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__Invite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invite</label>
        <referenceTo>sumoapp__Invite__c</referenceTo>
        <relationshipLabel>Invite Infos</relationshipLabel>
        <relationshipName>InviteInfos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsAnytimeAvailability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Anytime Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsDraft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDraft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsOverlapAppointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Overlap Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsOverlapEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Overlap Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsPrivateEvent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Private Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsReady__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRecurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsRegisterChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Register Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsReminderSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Reminder Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsSingleChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Single Event Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsWaitlistEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Waitlist Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsWaitlistManagment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If enabled, once an event is at capacity, people can join the Waitlist, which will email everyone once-a-day on the Waitlist announcing X openings (where participants declined), and the first to register get the spots.</inlineHelpText>
        <label>Is Waitlist Managment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__LastTimeReminderSend__c</fullName>
        <label>Last Time Reminder Send</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationDetails__c</fullName>
        <label>Location Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationGeometry__c</fullName>
        <label>Location Geometry</label>
        <scale>14</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>sumoapp__LocationType__c</fullName>
        <label>Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>